--- a/settings.ini
+++ b/settings.ini
@@ -1,5 +1,5 @@
 [PRESETS]
-username = someusername@db.com
+username = prithvi@gmail.com
 db = switchpoint
 collection = users
-frequency = 5
+frequency = 1
